--- a/css/common.css
+++ b/css/common.css
@@ -79,3 +79,19 @@ canvas {
   color: rgb(80, 168, 252);
   background-color: rgba(255, 255, 255, 0.7);
 }
+
+/* Custom Start AR Button */
+.webvr-ui-button {
+  font-family: 'Karla', sans-serif;
+  border: rgb(80, 168, 252) 2px solid;
+  border-radius: 2px;
+  box-sizing: border-box;
+  background: none;
+  width: 100%;
+  height: 100%;
+  min-width: 175.99999999999997px;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  transition: border 0.5s;
+}
