--- a/css/common.css
+++ b/css/common.css
@@ -11,9 +11,11 @@ header {
   z-index: 2;
   left: 0px;
   text-align: left;
-  max-width: 420px;
+  width: 100%;
+  height: 100%;
+  /* max-width: 420px; */
   padding: 0.5em;
-  background-color: rgba(255, 255, 255, 0.90);
+  /* background-color: rgba(255, 255, 255, 0.90); */
   margin-bottom: 0.5em;
   border-radius: 2px;
 }
@@ -86,7 +88,8 @@ canvas {
   border: rgb(80, 168, 252) 2px solid;
   border-radius: 2px;
   box-sizing: border-box;
-  background: none;
+  /* background: none; */
+  background-color: white;
   width: 100%;
   height: 100%;
   min-width: 175.99999999999997px;
