--- a/css/common.css
+++ b/css/common.css
@@ -7,9 +7,13 @@ body {
 }
 
 header {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* position: relative; */
   z-index: 2;
-  left: 0px;
+  /* left: 0px; */
   text-align: left;
   width: 100%;
   height: 100%;
